# star

./: .clean  .links  AN-1.0  AN-1.1  AN-1.4.1  AN-1.4.2  AN-1.4.3  AN-1.5  AN-1.5.1  AN-1.5.2  AN-1.5.3  COMPILE  COPYING  Changelog  Gmake  Gmake.linux  Makefile  Makefile.old  PORTING  README  README.aix  README.compile  README.crash  README.gmake  README.hpux  README.largefiles  README.linux  README.otherbugs  README.ppc  README.solaris  README.sunos  README.win32  STATUS.alpha  TODO  configure
DEFAULTS/: Defaults.aix  Defaults.cygwin32_wow64  Defaults.dgux  Defaults.freebsd  Defaults.hp-ux  Defaults.irix  Defaults.linux  Defaults.netbsd  Defaults.openbsd  Defaults.qnx  Defaults.sunos4  Defaults.sunos5
DEFAULTS_ENG/: Defaults.aix  Defaults.dgux  Defaults.freebsd  Defaults.hp-ux  Defaults.irix  Defaults.linux  Defaults.netbsd  Defaults.openbsd  Defaults.qnx  Defaults.sunos4  Defaults.sunos5
RULES/: 9000-725-hp-ux-cc.rul  9000-725-hp-ux-gcc.rul  MKLINKS  README  aviion-dgux3-cc.rul  aviion-dgux3-gcc.rul  aviion-dgux4-cc.rul  aviion-dgux4-gcc.rul  bemac-beos-cc.rul  bemac-beos-mwcc.rul  bepc-beos-cc.rul  hppa-nextstep-cc.rul  hppa-nextstep-gcc.rul  i386-bsd-os-gcc.rul  i386-freebsd-cc.rul  i386-freebsd-gcc.rul  i386-netbsd-cc.rul  i386-netbsd-gcc.rul  i386-openbsd-cc.rul  i386-openbsd-gcc.rul  i386-os2-gcc.rul  i586-linux-cc.rul  i586-linux-gcc.rul  i86pc-sunos5-cc.rul  i86pc-sunos5-gcc.rul  ip22-irix-cc.rul  mk-.id  mk-gmake.id  powerpc-beos-mwcc.rul  r-gmake.dep  rs6000-aix-cc.rul  rs6000-aix-gcc.rul  rules.aux  rules.clr  rules.cmd  rules.cnf  rules.dir  rules.drv  rules.hlp  rules.ins  (+15 more)
TEMPLATES/: temp-gcc.rul  temp-xcc.rul
autoconf/: xconfig.h.in
conf/: aclocal.m4  cc-config.sh  config.guess  config.sub  configure  configure.in  makeinc  mkdep-sco.sh  rules.cnf.in  xconfig.h.in
inc/: align_test.c  avoffset.c  avoffset.mk
include/: allocax.h  btorder.h  device.h  dirdefs.h  fctldefs.h  getargs.h  getcwd.h  libport.h  librmt.h  maxpath.h  mconfig.h  patmatch.h  prototyp.h  rmtio.h  schily.h  standard.h  statdefs.h  stdxlib.h  stkframe.h  strdefs.h  termcap.h  timedefs.h  unixstd.h  unls.h  utypes.h  vadefs.h  waitdefs.h  xmconfig.h
include/schily/: siconv.mk
lib/: Targets  align_test.c  astoi.c  astoll.c  avoffset.c  cmpbytes.c  cmpnullbytes.c  comerr.c  cvt.c  error.c  fconv.c  fexec.c  fillbytes.c  format.c  frame.h  getargs.c  getav0.c  getfp.c  jssnprintf.c  libschily-mapvers  libschily-mapvers.orig  libschily.mk  libschily_p.mk  match.c  movebytes.c  printf.c  raisecond.c  saveargs.c  shlschily.mk  sprintf.c  strcatl.c
lib/stdio/: cvmod.c  fcons.c  fdown.c  ffileread.c  ffilewrite.c  file_raise.c  fileseek.c  flag.c  fpipe.c  io.h  niread.c  openfd.c
libfind/: find.c
librmt/: Makefile  librmt.3  librmt_p.mk  remote.c  rmtgetconn.3  rmtopen.3  rmtstatus.3  shlrmt.mk
man/: Makefile
man/man4/: makefiles.4  makerules.4
mt/: Makefile  mt.c  remote.c
pkgdefs/CSW/CSWstar/: pkginfo
rmt/: Makefile  Makefile.man  rmt.1  rmt.c  rmt.dfl
star/: Makefile  acl_unix.c  append.c  buffer.c  create.c  create.dgux.patch  device.c  diff.c  diff.h  dir.h  dirtime.c  extract.c  fifo.c  fifo.h  header.c  hole.c  lhash.c  list.c  longnames.c  mtio.h  names.c  props.c  props.h  remote.c  remote.h  star.1  star.c  star.h  star_unix.c  starsubs.h  table.c  table.h  testscripts  unicode.c  xheader.c
star_sym/: Makefile
tartest/: Makefile  tartest.c
testscripts/: 00INDEX  README.gtarfail  README.largefiles  README.longnames  README.paxbug  README.quicktest
